# M1

./: .classpath  .gitignore
BDD_av/: clients.sql
BDD_av/TP_1/: Compte_Rendu.sql  empty.sql
BDD_av/TP_2/: compte_rendu.sql  division.sql  test_table.sql
BDD_av/TP_3/: Compte_rendu.md
BDD_av/TP_4/: Compte_rendu.md
BDD_av/TP_5/: Compte_rendu.md
BDD_av/TP_6/: Compte_rendu.md
BDD_av/table_sql/: client_all.sql  empty.sql
C++/hello/: .clang-format  CMakeLists.txt  helloworld.cpp
C++/tp-02/: Card.hpp  Player.hpp  bataille  consignes.md  main.cpp
C++/tp-03/: TP3.md
C++/tp-05/: TP5.md
C++/tp-1/: consignes.md
C++/tp-11/: TP11.md
C++/tp-2/: Card.cpp  Player.cpp
C++/tp-3/: TP3.md
C++/tp-7/: TP7.md
C++/tp-9/: TP9.md
Concurrence/2022_2023/: .project
Concurrence/Concurrence Lock-Free/: .project
Concurrence/Data race, entrelacement et JIT/: .project
Concurrence/ExecutorService/: .project
Concurrence/Interuptions et Exceptions/: .project
Concurrence/Producteur Consommateur/: .project
Concurrence/ReentrantLock/: .project
Concurrence/Rendez-vous (come back)/: .project
Concurrence/Singaux (Suites) - Deadlock/: .project
Concurrence/Synchronized/: .project
Concurrence/Thread, Runnable, join/: .project
Concurrence/VarHandle/: .project
Cryptographie/Exam/: examen_crypto_mars_2025-texte.ipynb.txt
Cryptographie/td-1/: Cryptographie-1.ipynb  mono.txt  poly.txt
Cryptographie/td-3/: Arithmétique modulaire.ipynb
Cryptographie/td-6/: ent3.py  examen_d_entrainement-2025.ipynb
Java/TP_10/: .project  Compte_Rendu.md  pom.xml
Java/TP_11/: .classpath  .project  pom.xml  (+1 more)
Machine_Learning/: tensorflow.md
Python/: TD1.ipynb  dico.py
Traitement_Images/td-04/: CMakeLists.txt
Traitement_Images/td-04/src/: tp4_exo1.cpp
Traitement_Images/td-05/: CMakeLists.txt
Traitement_Images/td-05/src/: fourierTransform.cpp  fourierTransform.hpp  tp05_ex01.cpp
Traitement_Images/td-06/: CMakeLists.txt
Traitement_Images/td-06/src/: morpho.cpp
(+415 files in other folders)
